--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node-dev src/server.ts"
+    "dev": "ts-node-dev src/server.ts",
+    "postinstall": "tsc",
+    "production": "node ./build/server.js"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
@@ -26,5 +28,9 @@
     "multer": "^1.4.4",
     "prisma": "^3.9.2",
     "zod": "^3.22.4"
+  },
+  "engines":{
+    "node": "20.x"
+
   }
 }
