--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "ts-node-dev src/server.ts",
+    "heroku-postbuild": "prisma generate",
     "postinstall": "tsc",
     "start": "prisma generate && node ./build/server.js",
     "production": "yarn start",
@@ -32,6 +33,6 @@
     "zod": "^3.22.4"
   },
   "engines": {
-    "node": "20.x"
+    "node": "14.x"
   }
 }
