--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
+    "prestart": "yarn prisma:generate",
     "dev": "ts-node-dev src/server.ts",
     "heroku-postbuild": "yarn prisma:generate",
     "postinstall": "tsc",
-    "start": "yarn prisma:generate && node ./build/server.js",
+    "start": "node ./build/server.js",
     "production": "yarn start",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate deploy"
-  },
+  },  
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.12",
