--- a/package.json
+++ b/package.json
@@ -4,15 +4,13 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "prestart": "yarn prisma:generate",
     "dev": "ts-node-dev src/server.ts",
-    "heroku-postbuild": "yarn prisma:generate",
+    "heroku-postbuild": "prisma generate",
     "postinstall": "tsc",
-    "start": "node ./build/server.js",
+    "start": "prisma generate && node ./build/server.js",
     "production": "yarn start",
-    "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate deploy"
-  },  
+  },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.12",
@@ -35,6 +33,6 @@
     "zod": "^3.22.4"
   },
   "engines": {
-    "node": "14.x"
+    "node": "20.x"
   }
 }
