add database config

--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "license": "MIT",
   "scripts": {
     "dev": "ts-node-dev src/server.ts",
-    "heroku-postbuild": "prisma generate",
     "postinstall": "tsc",
-    "start": "prisma generate && node ./build/server.js",
+    "start": "yarn prisma: generate && node ./build/server.js",
+    "prisma:generate": "prisma generate",
     "production": "yarn start",
     "prisma:migrate": "prisma migrate deploy"
   },
@@ -33,6 +33,6 @@
     "zod": "^3.22.4"
   },
   "engines": {
-    "node": "20.x"
+    "node": "20.10.x"
   }
 }
