--- a/package.json
+++ b/package.json
@@ -33,6 +33,9 @@
     "zod": "^3.22.4"
   },
   "engines": {
-    "node": "20.x"
+    "node": "14.x" 
+  },
+  "resolutions": {
+    "@types/node": "^14.14.37" 
   }
 }
