add database config

--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "license": "MIT",
   "scripts": {
     "dev": "ts-node-dev src/server.ts",
-    "postinstall": "tsc",
-    "start": "yarn prisma:generate && node ./build/server.js",
+    "postinstall": "yarn prisma:generate && tsc",
+    "start": "node ./build/server.js",
     "prisma:generate": "prisma generate",
     "production": "yarn start",
     "prisma:migrate": "prisma migrate deploy"
