--- a/package.json
+++ b/package.json
@@ -4,12 +4,11 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "postinstall": "yarn prisma:generate && tsc",
+    "dev": "ts-node-dev src/server.ts",
+    "postinstall": "tsc",
     "start": "prisma generate && node ./build/server.js",
-    "prisma:generate": "prisma generate",
     "production": "yarn start",
-    "prisma:migrate": "prisma migrate deploy",
-    "dev": "ts-node-dev src/server.ts"
+    "prisma:migrate": "prisma migrate deploy"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
@@ -29,13 +28,13 @@
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.4",
-    "prisma": "^3.9.2",
+    "prisma": "^5.7.1",
     "zod": "^3.22.4"
   },
   "engines": {
-    "node": "14.x" 
+    "node": "20.x"
   },
   "resolutions": {
-    "@types/node": "^14.14.37" 
+    "@types/node": "^14.14.37"
   }
 }
