--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "engines": {
+    "node": "18.18.0"
+  },
   "scripts": {
     "dev": "ts-node-dev src/server.ts",
     "postinstall": "tsc",
@@ -30,11 +33,7 @@
     "multer": "^1.4.4",
     "prisma": "^5.7.1",
     "zod": "^3.22.4"
-  },
-  "engines": {
-    "node": "20.x"
-  },
-  "resolutions": {
-    "@types/node": "^14.14.37"
   }
+  
+ 
 }
