--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
   "engines": {
     "node": "18.18.0"
   },
+  
   "scripts": {
     "dev": "ts-node-dev src/server.ts",
-    "postinstall": "prisma generate",
+    "postinstall": "yarn prisma:generate",
     "start": "node ./build/server.js",
     "build": "tsc",
     "production": "yarn start",
-    "prisma:migrate": "prisma migrate deploy"
+    "prisma:migrate": "prisma migrate dev --schema=./src/config/prisma/schema.prisma",
+    "prisma:generate": "prisma generate --schema=./src/config/prisma/schema.prisma"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
