--- a/package.json
+++ b/package.json
@@ -3,19 +3,20 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
-  "engines": {
-    "node": "18.18.0"
-  },
-  
   "scripts": {
     "postinstall": "yarn prisma:generate",
     "start": "node ./build/server.js",
     "dev": "ts-node-dev src/server.ts",
-    "build": "tsc",
+    "build": "babel src --extensions \".js,.ts\" --out-dir build --copy-files",
     "prisma:migrate": "prisma migrate dev --schema=./src/config/prisma/schema.prisma",
     "prisma:generate": "prisma generate --schema=./src/config/prisma/schema.prisma"
   },
   "devDependencies": {
+    "@babel/cli": "^7.23.4",
+    "@babel/core": "^7.23.7",
+    "@babel/plugin-proposal-decorators": "^7.23.7",
+    "@babel/preset-env": "^7.23.7",
+    "@babel/preset-typescript": "^7.23.3",
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
@@ -36,6 +37,4 @@
     "prisma": "^5.7.1",
     "zod": "^3.22.4"
   }
-  
- 
 }
