--- a/package.json
+++ b/package.json
@@ -3,14 +3,18 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
-
+  "engines": {
+    "node": "18.18.0"
+  },
   "scripts": {
     "postinstall": "yarn prisma:generate",
     "start": "node ./build/server.js",
     "dev": "ts-node-dev src/server.ts",
     "build": "babel src --extensions \".js,.ts\" --out-dir build --copy-files",
     "prisma:migrate": "prisma migrate dev --schema=./src/config/prisma/schema.prisma",
-    "prisma:generate": "prisma generate --schema=./src/config/prisma/schema.prisma"
+    "prisma:generate": "prisma generate --schema=./src/config/prisma/schema.prisma",
+    "prisma:deploy": "npx prisma migrate deploy --schema=./src/config/prisma/schema.prisma"
+
   },
   "devDependencies": {
     "@babel/cli": "^7.23.4",
