--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
 
   "scripts": {
-    "prestart": "mkdir -p /opt/render/project/src/migrations",
+    "prebuild": "mkdir -p /opt/render/project/src/migrations",
     "postinstall": "yarn prisma:generate",
     "start": "node ./build/server.js",
     "dev": "ts-node-dev src/server.ts",
