--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
-
   "scripts": {
     "prebuild": "mkdir -p /opt/render/project/src/migrations",
     "postinstall": "yarn prisma:generate",
@@ -13,7 +12,6 @@
     "prisma:migrate": "prisma migrate dev --schema=./src/config/prisma/schema.prisma",
     "prisma:generate": "prisma generate --schema=./src/config/prisma/schema.prisma",
     "prisma:deploy": "npx prisma migrate deploy --schema=./src/config/prisma/schema.prisma"
-
   },
   "devDependencies": {
     "@babel/cli": "^7.23.4",
@@ -26,6 +24,7 @@
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/multer": "^1.4.7",
+    "@types/nodemailer": "^6.4.14",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.5.5"
   },
@@ -38,6 +37,7 @@
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.4",
+    "nodemailer": "^6.9.8",
     "prisma": "^5.7.1",
     "zod": "^3.22.4"
   }
